Add an image upload to the selector and a few other small fixes.
